# MiniDocs

./: .gitignore  Readme.md  docker-compose.yml
backend/: .dockerignore  README.md  pyproject.toml
backend/app/: datamodels.py  main.py
backend/app/agents/: draft.ipynb  workflow.py
backend/app/service/: format_output_file.py
frontend/: Dockerfile  cases.txt  index.html  package-lock.json  vite.config.js
frontend/src/: placeholderdata.jsx
frontend/src/components/: EvaluationHistory.jsx  GeneratedSection.jsx
frontend/src/components/sections/: GeneratedContentSection.jsx  Header.jsx  TopicConfigSection.jsx  TopicSectionStructure.jsx
minidocs-frontend/: package.json
minidocs-frontend/src/: App.jsx
minidocs-frontend/src/components/: UserDefinedSection.jsx
